dockeritzat grupscooperatius app

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "core",
   "version": "0.0.1",
-  "description": "A Quasar Project",
-  "productName": "Quasar App",
+  "description": "GestSuite - Gestió d'usuaris Gestib i GSuite",
+  "productName": "GestSuite - Gestió d'usuaris Gestib i GSuite",
   "author": "jgalmes1@iesmanacor.cat",
   "private": true,
   "scripts": {
